<resources>
    <string name="app_name">NeighborFriend</string>
    <string name="vizinho_amigo">Neighbor Friend</string>
    <string name="Imagem_incial">TODO</string>
    <string name="barra_pesquisar">Search....</string>
    <string name="botao_pesquisar">Search</string>
    <string name="ima_inicial">TODO</string>
    <string name="butao_lista_de_vizinhos">Neighbors List</string>
    <string name="butao_lista_de_farmacias">Pharmacies List</string>
    <string name="butao_lista_de_supermecados">Supermarket List</string>
    <string name="butao_inserir_novo_vizinho">Insert New Neighbor</string>
    <string name="email_vizinho">Email</string>
    <string name="telemovel_vizinho">Cell Phone</string>
    <string name="registo_do_vizinho_amigo">Neighbor friend register</string>
    <string name="nome_vizinho">Name</string>
    <string name="morada_vizinho">City</string>
    <string name="botao_registar_vizinho">Register</string>
    <string name="nome_obrigatorio">Name required</string>
    <string name="Vizinho_sucesso">Neighbor added with sucess!</string>
    <string name="farmacia_sucesso">Pharmacy add with sucess!</string>
    <string name="super_sucesso">Supermarket added with sucess!</string>
    <string name="email_obrigatorio">Insert Email</string>
    <string name="telemovel_invalido">Invalid cell phone</string>
    <string name="morada_invalida">Invalid address</string>
    <string name="title_activity_lista_vizinhos">ListaVizinhos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_reg_super">Register</string>
    <string name="criar_novo_supermercado">Create New Supermarket</string>
    <string name="button_reg_farm">Register</string>
    <string name="criar_nova_farm_cia">Create new Pharmacy</string>
</resources>
